2.4.0/_sources/generated/torchaudio.models.Wav2Vec2Model.rst.txt
..
  autogenerated from source/_templates/autosummary/model_class.rst

.. currentmodule:: torchaudio.models

..
  None

.. TITLE

Wav2Vec2Model
=============

.. CLASS DEFINITIONS

.. autoclass:: torchaudio.models.Wav2Vec2Model

Methods
=======



forward
-------

.. container:: py attribute

   .. automethod:: torchaudio.models.Wav2Vec2Model.forward

extract_features
----------------

.. container:: py attribute

   .. automethod:: torchaudio.models.Wav2Vec2Model.extract_features

.. HELPER STRUCTURES

.. FACTORY FUNCTIONS

Factory Functions
=================

.. autosummary::
   :toctree: ../generated
   :nosignatures:


   ~torchaudio.models.wav2vec2_model
   ~torchaudio.models.wav2vec2_base
   ~torchaudio.models.wav2vec2_large
   ~torchaudio.models.wav2vec2_large_lv60k
   ~torchaudio.models.wav2vec2_xlsr_300m
   ~torchaudio.models.wav2vec2_xlsr_1b
   ~torchaudio.models.wav2vec2_xlsr_2b
   ~torchaudio.models.hubert_base
   ~torchaudio.models.hubert_large
   ~torchaudio.models.hubert_xlarge
   ~torchaudio.models.wavlm_model
   ~torchaudio.models.wavlm_base
   ~torchaudio.models.wavlm_large

.. PROTOTYPE FACTORY FUNCTIONS

Prototype Factory Functions
===========================

.. currentmodule:: torchaudio.prototype.models

.. autosummary::
   :toctree: ../generated
   :nosignatures:


   ~torchaudio.prototype.models.emformer_hubert_model
   ~torchaudio.prototype.models.emformer_hubert_base
   ~torchaudio.prototype.models.conformer_wav2vec2_model
   ~torchaudio.prototype.models.conformer_wav2vec2_base

.. UTILITY FUNCTIONS

Utility Functions
=================

.. currentmodule:: torchaudio.models

.. autosummary::
   :toctree: ../generated
   :nosignatures:


   ~torchaudio.models.wav2vec2.utils.import_fairseq_model
   ~torchaudio.models.wav2vec2.utils.import_huggingface_model